add latest RoiPainter
Roi painter update

--- a/SoftRoiPainter/index.html
+++ b/SoftRoiPainter/index.html
@@ -34,6 +34,11 @@
     RoiPainterは、X線CTやMRI装置で撮影された三次元画像を観察・領域分割するためのソフトウエアです。
     井尻敬（立命館大講師）が主体となり、立命館大の学生や慶応大の学生、の協力のもと開発しています。
     ソースコードはGPLにて公開を予定しています。</br>
+
+    </br>
+    RoiPainterの起動には、Visual Studio 2015 runtime画必要です．起動しない場合は以下をインストールしてください。<br>
+    <a href="https://www.microsoft.com/ja-JP/download/details.aspx?id=48145">Visual Studio 2015 Runtime </a><br>
+    </br>
     </br>
     本ソフトウエアは研究のためのプロトタイプです。<br>
     開発者，開発協力者，及び，開発者所属機関は，本ソフトウエアを利用して起きた損害に関し責任を負いません．<br> 
@@ -47,16 +52,20 @@
 
     <br>
     <a href="SimpleDcmViewer20160912.zip">SimpleDcmViewer20160912.zip</a><br>
-    Dcmスライス画像を読み込み、クリッピングと画像縮小をして、traw3D_ssというファイル形式にするソフトウエアです。
-
+    Dcmスライス画像を読み込み、クリッピングと画像縮小をして、traw3D_ssというファイル形式にするソフトウエアです。<br>
     <br>
-    <a href="RoiPainter20160912.zip">RoiPainter20160912.zip</a><br>
-    ストロークトリミングでトリミングした領域を別領域にするように変更、key board shortcutに関するバグを修正、その他細かなバグを修正。
 
+    <a href="RoiPainter20161123.zip">RoiPainter20161123.zip</a><br>
+    Dcmの読み込み機能を改善．multi slice dicom画像に対応．その他細かなバグを修正。<br>
+    <br>
+
+    <a href="RoiPainter20160912.zip">RoiPainter20160912.zip</a><br>
+    ストロークトリミングでトリミングした領域を別領域にするように変更、key board shortcutに関するバグを修正、その他細かなバグを修正。<br>
+    <br>
 
     <br>
     <a href="RoiPainter20160908.zip">RoiPainter20160908.zip</a><br>
-    基本的なデータのインポート（bmp, dcm, tif, traw3D_ss）, データ出力（bmp, stl, obj）, 可視化ツール（伝達関数、局面断面）、領域分割ツール（RegionGrowing, GraphCut）、マスク生成、を実装済み．
+    基本的なデータのインポート（bmp, dcm, tif, traw3D_ss）, データ出力（bmp, stl, obj）, 可視化ツール（伝達関数、局面断面）、領域分割ツール（RegionGrowing, GraphCut）、マスク生成、を実装済み．<br>
 
 </div>
 
