--- a/SoftRoiPainter/index.html
+++ b/SoftRoiPainter/index.html
@@ -50,22 +50,30 @@
 <h3>Download</h3>
 <div class="ProjAbst">
 
-    <br>
-    <a href="SimpleDcmViewer20160912.zip">SimpleDcmViewer20160912.zip</a><br>
-    Dcmスライス画像を読み込み、クリッピングと画像縮小をして、traw3D_ssというファイル形式にするソフトウエアです。<br>
-    <br>
-
     <a href="RoiPainter20161123.zip">RoiPainter20161123.zip</a><br>
-    Dcmの読み込み機能を改善．multi slice dicom画像に対応．その他細かなバグを修正。<br>
+    Dcmの読み込み機能を改善．multi slice dicom画像に対応．その他細かなバグを修正。
+    <br>
     <br>
 
     <a href="RoiPainter20160912.zip">RoiPainter20160912.zip</a><br>
-    ストロークトリミングでトリミングした領域を別領域にするように変更、key board shortcutに関するバグを修正、その他細かなバグを修正。<br>
+    ストロークトリミングでトリミングした領域を別領域にするように変更、key board shortcutに関するバグを修正、その他細かなバグを修正。
+    <br>
     <br>
 
     <br>
     <a href="RoiPainter20160908.zip">RoiPainter20160908.zip</a><br>
-    基本的なデータのインポート（bmp, dcm, tif, traw3D_ss）, データ出力（bmp, stl, obj）, 可視化ツール（伝達関数、局面断面）、領域分割ツール（RegionGrowing, GraphCut）、マスク生成、を実装済み．<br>
+    基本的なデータのインポート（bmp, dcm, tif, traw3D_ss）, データ出力（bmp, stl, obj）, 可視化ツール（伝達関数、局面断面）、領域分割ツール（RegionGrowing, GraphCut）、マスク生成、を実装済み．
+    <br>
+    <br>
+
+
+    <br>
+    <a href="SimpleDcmViewer20160912.zip">SimpleDcmViewer20160912.zip</a><br>
+    Dcmスライス画像を読み込み、クリッピングと画像縮小をして、traw3D_ssというファイル形式にするソフトウエアです。
+    <br>
+    <br>
+
+
 
 </div>
 
@@ -81,6 +89,12 @@
 </div>
 
     <hr>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
  
 </body>
 </html>
