--- a/publications.html
+++ b/publications.html
@@ -151,6 +151,28 @@
 <ol class="PubList">
 
     <li>
+        XXX, XXX, XXX, <b>TITLE</b>, IEVC 2017, Da Nang, Vietnam, 2017/2/28-3/3.
+    </li>
+ 
+    <li>
+        Hidetomo Kataoka, Takashi Ijiri; Jeremy White; Akira Hirabayashi,
+        <b>Acoustic Probing to Estimate Freshness of Tomato</b>,
+        Asia-Pacific Signal and Information Processing Association (APSIPA) 2016, Jeju Korea, 2016/12/13-16. (to appear)
+    </li>
+
+    <li>
+        Ryosuke Kawami; Akira Hirabayashi; Nobuyuki Tanaka; Motoi Shibata; Takashi Ijiri,
+        <b>2-Dimensional High-Quality Reconstruction of Compressive Measurements of Phased Array Weather Radar</b>,
+        Asia-Pacific Signal and Information Processing Association (APSIPA) 2016, Jeju Korea, 2016/12/13-16. (to appear)
+    </li>
+
+    <li>
+        Motoi Shibata, Norihito Inamuro, Takashi Ijiri, and Akira Hirabayashi,
+        <b>High accuracy reconstruction algorithm for CS-MRI using SDMM</b>,
+        Asia-Pacific Signal and Information Processing Association (APSIPA) 2016, Jeju Korea, 2016/12/13-16. (to appear)
+    </li>
+
+    <li>
         Akira Hirabayashi, Naoki Nogami, Takashi Ijiri, Laurent Condat,
         <b>Sequential image completion for high-speed large-pixel number sensing</b>
         EUSIPCO 2016 Posters, Budapest, Hungary, 29 Aug - 2 Sept 2016. (Refereed)(Poster)
@@ -325,6 +347,11 @@
 
 <ol class="PubList">
 <li>
+    菊池博史, 川見亮介, 平林晃, 井尻敬, 嶋村重治, 金寛, 
+    <b>フェーズドアレイ気象レーダによるネットワーク観測のための圧縮センシングデータ転送に関する一考察</b>, 
+    信学技報, vol. 116, no. 318, RCS2016-197, pp. 35-40, 京都市国際交流会館, 2016年11月24日. (依頼講演)
+</li>
+<li>
     Tang Chenmin, 稲室憲人, 井尻敬, 平林晃, <b>ダブルスパースモデルとオンライン辞書学習を用いた高速MR撮像法</b>, 
     電子情報通信学会 第31回 信号処理シンポジウム, 2016年11月8-10日. 
 </li>
@@ -338,7 +365,7 @@
     生体医用画像研究会 第3回若手発表会, 2016年3月12日．
 </li>
 <li>
-    上田雄太，中沢一雄，井尻敬，稲田慎，大星直樹. <b>先天性心疾患三次元モデル作成ツール<b>,
+    上田雄太，中沢一雄，井尻敬，稲田慎，大星直樹. <b>先天性心疾患三次元モデル作成ツール</b>,
     情報処理学会第78回全国大会，慶応大学矢上キャンパス，2016年3月10-12日．
 </li>
 <li>
@@ -443,8 +470,12 @@
 <h1>国内学会・研究会・シンポジウム（ポスター・デモ発表）</h1>
 <ol class="PubList">
 <li>
-    小島嵩道，井尻敬，片岡秀公，平林晃. <b>食品消費モニタリングのための切断音を用いた食品認識</b>, 
-    インタラクティブシステムとソフトウェアに関するワークショップ(WISS 2005), デモ発表, 大分県速見郡, 2015年12月2-4日．
+    木坂綺花，井尻敬，平林晃, <b>高速度カメラを用いた素振り練習の支援システム</b>
+    インタラクティブシステムとソフトウェアに関するワークショップ(WISS 2016), デモ発表, 滋賀県長浜市, 2016年12月14-16日．
+</li>
+<li>
+    小島嵩道，井尻敬，片岡秀公，平林晃. <b>食品消費モニタリングのための切断音を用いた食品認識</b>,
+    インタラクティブシステムとソフトウェアに関するワークショップ(WISS 2015), デモ発表, 大分県速見郡, 2015年12月2-4日．
 </li>
 <li>
     井尻敬，中村篤志，酒井道，平林晃，宮嵜武，姫野龍太郎．<b>高速度カメラを用いた変化球の回転解析とその可視化</b>, 
