--- a/SoftRoiPainter/index.html
+++ b/SoftRoiPainter/index.html
@@ -50,6 +50,13 @@
 <h3>Download</h3>
 <div class="ProjAbst">
 
+    <a href="RoiPainter20161225.zip">RoiPainter20161225.zip</a><br>
+    Dcmの読み込み機能を改善(Rescale Intercept/Rescale slopeに対応)．<br>
+    カメラ方向のインジケータを追加．<br>
+    インジケータをダブルクリックするとカメラ位置を初期化可能です。<br>
+    <br>
+    <br>
+
     <a href="RoiPainter20161123.zip">RoiPainter20161123.zip</a><br>
     Dcmの読み込み機能を改善．multi slice dicom画像に対応．その他細かなバグを修正。
     <br>
