--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <td><b>Modeling Plant Life in Computer Graphics</b>
     <br>
     ACM SIGGRAPH 2016 courses 
-    [<a href="http://goo.gl/PaJjy4">project page</a>]
+    [<a href="http://plantlife.pirk.info/">project page</a>]
     [<a href="http://dl.acm.org/citation.cfm?id=2927332">ACM DL</a>]
     <br>
 </tr>
