--- a/publications.html
+++ b/publications.html
@@ -227,6 +227,7 @@
         S. Pirk, B. Benes, O. Deussen, R. Mech, B. Chen. and T. Ijiri.:
         <b>Modeling Plant Life in Computer Graphics</b>, 
         SIGGRAPH 2016 courses, Anaheim, USA, 24-28 July, 2016. (Refereed tutorial)
+        [<a href=" http://plantlife.pirk.info/">project page</a>]       
     </li>
 
     <li>
