add RoiPainter and classes
add Roi painter and classes

--- a/SoftRoiPainter/index.html
+++ b/SoftRoiPainter/index.html
@@ -49,6 +49,12 @@
 
 <h3>Download</h3>
 <div class="ProjAbst">
+    <a href="RoiPainter20170207.zip">RoiPainter20170207.zip</a><br>
+    Local Region GrowingツールのUI改善<br>
+    <br>
+    <br>
+
+
 
     <a href="RoiPainter20161225.zip">RoiPainter20161225.zip</a><br>
     Dcmの読み込み機能を改善(Rescale Intercept/Rescale slopeに対応)．<br>
