--- a/2016ProjCogKnife/index.html
+++ b/2016ProjCogKnife/index.html
@@ -28,7 +28,11 @@ COGKNIFE: FOOD RECOGNITION FROM THEIR CUTTING SOUNDS
 </p>
 
 <p>
-Takamichi Kojima,   Takashi Ijiri,   Jeremy White,   Hidetomo Kataoka,   Akira Hirabayashi
+Takamichi Kojima,
+<a href="https://takashiijiri.com">Takashi Ijiri</a>,  
+     Jeremy White,   
+    <a href="https://hidetomokataoka.github.io/">Hidetomo Kataoka</a>,
+    Akira Hirabayashi
 </p>
 
 <h2>Abstract</h2>
