--- a/index.html
+++ b/index.html
@@ -74,12 +74,15 @@
     <font style="font-size : 80%; line-height: 160%;">
 
         <font color="#AA0000">Recent updates</font><br>
+        2017/2 : <a href="https//hidetomokataoka.github.io/">My collaborator</a> is finishing IPA Mito Project. 
+        2017/2 : <a href="https://www2.securecms.com/ICASSP2017/Papers/ViewPapers.asp?PaperNum=1900">One paper was accepted for ICASSP 2017.</a>
+        2017/2 : A paper was accepted for IEVC (cllaboration with Y. Dobashi and H. Todo).
         2016/10: Our 3 papers were accepted for APSIPA 2016.<br>
+<!--   
         2016/5 : Our poster was accepted for SIGGRAPH 2016.<br>
         2016/5 : I will talk at SIGGRAPH 2016 courses "Modeling Plant Life in Computer Graphics".<br>
         2016/5 : Our CogKnife paper was accepted for CEA 2016 <a href="2016ProjCogKnife/index.html"> project page </a>.<br>
         2016/5 : Our heart vizualization paper was accepted for EuroGraphics (short paper).<br>
-<!--   
          2015/4/ 1 : Moved to Ritsumeikan University as a full time Lecturer <br>
         2015/3/31: <a href="http://www.riken.jp/brict/Ijiri/VoTracer/index.html">VoTracer was updated</a><br>
 
