--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
     <font style="font-size : 80%; line-height: 160%;">
 
         <font color="#AA0000">Recent updates</font><br>
-        2017/2 : <a href="https//hidetomokataoka.github.io/">My collaborator</a> is finishing IPA Mito Project. 
-        2017/2 : <a href="https://www2.securecms.com/ICASSP2017/Papers/ViewPapers.asp?PaperNum=1900">One paper was accepted for ICASSP 2017.</a>
-        2017/2 : A paper was accepted for IEVC (cllaboration with Y. Dobashi and H. Todo).
+        2017/2 : <a href="https://hidetomokataoka.github.io/">My collaborator</a> is finishing IPA Mito Project. <br>
+        2017/2 : <a href="https://www2.securecms.com/ICASSP2017/Papers/ViewPapers.asp?PaperNum=1900">One paper was accepted for ICASSP 2017.</a><br>
+        2017/2 : A paper was accepted for IEVC (cllaboration with Y. Dobashi and H. Todo).<br>
         2016/10: Our 3 papers were accepted for APSIPA 2016.<br>
 <!--   
         2016/5 : Our poster was accepted for SIGGRAPH 2016.<br>
@@ -125,7 +125,7 @@
     <tr><td>April 2015 - </td> <td>Present    </td> <td><b>Lecturer</b>, Ritsumeikan University.</td></tr>
 
     <tr><td>April 2012 - </td> <td>March 2015 </td> <td><b>Special Postdoctoral Researcher</b>, Image Processing Research Team, RIKEN.</td></tr>
-    <tr><td>April 2013 - </td> <td>March 2015 </td> <td><b>Visiting Associate Professor   </b>, Dept. Human Mechanical Systems &amp; Design, Hokkaido U.</td></tr>
+    <tr><td>April 2013 - </td> <td>March 2016 </td> <td><b>Visiting Associate Professor   </b>, Dept. Human Mechanical Systems &amp; Design, Hokkaido U.</td></tr>
     <tr><td>April 2009 - </td> <td>March 2012 </td> <td><b>Postdoctoral Researcher        </b>, Biological infrastructure construction team, RIKEN.</td></tr>
     <tr><td>April 2004 - </td> <td>March 2009 </td> <td><b>Graduate student               </b>, The University of Tokyo. Mentored by Prof. Takeo Igarashi.</td></tr>
     <tr><td>April 2000 - </td> <td>March 2004 </td> <td><b>Undergrad. student             </b>, Tokyo Institute of Technology. Mentored by Prof. Etsuya Shibayama.</td></tr>
