--- a/index_j.html
+++ b/index_j.html
@@ -75,13 +75,16 @@
 
         <font color="#AA0000">Recent updates</font><br>
 
+        2017/2 : <a href="https://hidetomokataoka.github.io/">My collaborator</a> is finishing IPA Mito Project. <br>
+        2017/2 : <a href="https://www2.securecms.com/ICASSP2017/Papers/ViewPapers.asp?PaperNum=1900">One paper was accepted for ICASSP 2017.</a><br>
+        2017/2 : A paper was accepted for IEVC (cllaboration with Y. Dobashi and H. Todo).<br>
         2016/10: 学生の論文3本がAPSIPA 2016に採録されました.<br>
+<!--   
         2016/7 : SIGGRAPH 2016にposterが採録されました.<br>
         2016/7 : SIGGRAPH 2016 courses にて"Modeling Plant Life in Computer Graphics"を発表しました.<br>
         2016/5 : 学生のプロジェクトCogKnifeが CEA 2016に採録されました <a href="2016ProjCogKnife/index.html"> project page </a>.<br>
         2016/5 : 心臓可視化に関する研究がEuroGraphics (short paper)に採録されました.<br>
         2016/4 : 学生の研究プロジェクトが未踏ソフトウエア創造事業に採録されました.<br>
-<!--   
          2015/4/ 1 : Moved to Ritsumeikan University as a full time Lecturer <br>
         2015/3/31: <a href="http://www.riken.jp/brict/Ijiri/VoTracer/index.html">VoTracer was updated</a><br>
 
